--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -2,6 +2,7 @@
 %----packages----%
 \usepackage{geometry}
 \usepackage{hanging}
+\usepackage{url}
 %\usepackage{pagecolor}
 \usepackage{geometry}
 	\geometry{
@@ -30,10 +31,15 @@ thamamura[@]ncnp.go.jp\\
 
 \section{Professional Position}
 \begin{itemize}
-	\item 2017--2019: \textbf{Research Fellow (DC2)}, Japan Society for the Promotion of Science (Host Institution: University of Tokyo)
-	\item 2019--2020: \textbf{Associate Researcher}, KDDI Research, Inc.
-	\item 2020--present: \textbf{Invited Researcher}, KDDI Research, Inc.
-	\item 2020--present: \textbf{Research Fellow (PD)}, Japan Society for the Promotion of Science (Host Institution: National Center of Neurology and Psychiatry)
+	\item 2017/04--2019/03: \textbf{Research Fellow (DC2)}, Japan Society for the Promotion of Science (Host Institution: University of Tokyo)
+	\item 2019/04--2020/03: \textbf{Associate Researcher}, KDDI Research, Inc.
+	\item 2020/04--present: \textbf{Research Fellow (PD)}, Japan Society for the Promotion of Science (Host Institution: National Center of Neurology and Psychiatry)
+\end{itemize}
+
+\section{Other Positions}
+\begin{itemize}
+	\item 2020/04--present: \textbf{Invited Researcher}, KDDI Research, Inc.
+	\item 2022/12--2023/01: \textbf{Visiting Scholar}, Department of Psychology, National Taiwan University
 \end{itemize}
 
 \section{Education}
@@ -78,8 +84,8 @@ thamamura[@]ncnp.go.jp\\
 	\item \underline{Hamamura, T.}, \& Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. \textit{International Journal of Mental Health and Addiction}, 18, 1-12. doi:10.1007/s11469-018-9991-8
 	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (in press). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. \textit{Journal of Psychiatric Research}, 142, 0022-3956. doi:10.1016/j.jpsychires.2021.07.054
 	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. \textit{Translational Psychiatry}. doi:10.1038/s41398-021-01696-x
-	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2021). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. \textit{Addictive Behaviors Reports}. doi:10.1016/j.abrep.2021.100400	
-	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (in press). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. \textit{Japanese Psychological Research}.
+	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2022). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. Addictive Behaviors Reports, 15, 100400. \url{https://doi.org/10.1016/j.abrep.2021.100400}
+	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (2022). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. Japanese Psychological Research. \url{https://doi.org/10.1111/jpr.12408}
 \end{enumerate}
 
 \subsection{Non-Peer-Reviewed Articles and Preprints}
@@ -87,8 +93,10 @@ thamamura[@]ncnp.go.jp\\
 	\item Ueda, M., \underline{Hamamura, T.}, Nakamura, A., \& Shimoyama, H. (2017). The application of animal research on the gene-environment interaction: A review. \textit{Bulletin of the Division of Clinical Psychology}, University of Tokyo, 40, 22-29.
 	\item Uchimura, Y., \underline{Hamamura, T.}, Kitahara, Y., Oka, M., Suzuki, T., Kobayashi, N., \& Shimoyama, H., (2018). A Review on the population approach using Acceptance and commitment therapy: Increase of well-being and prevention effects. \textit{Bulletin of the Division of Clinical Psychology}, University of Tokyo, 41, 34-41.
 	\item Takaseki, H., \underline{Hamamura, T.}, Lee, J., \& Shimoyama, H. (2019). Current support system and challenges on isolated mothers with risk of abuse. \textit{Bulletin of the Division of Clinical Psychology}, University of Tokyo, 42.
-	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. medRxiv. doi:110.1101/2020.12.15.20246819
-	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2022, December 21). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. PsyArXiv. https://doi.org/10.31234/osf.io/2uzsd
+	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. medRxiv. \url{https://doi.org/110.1101/2020.12.15.20246819}
+	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2022, December 21). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. PsyArXiv. \url{https://doi.org/10.31234/osf.io/2uzsd}
+	\item Quaranta, T., \underline{Hamamura, T.}, \& Mearns, J. (2023, January 11). Correlates of Authoritarian versus Authoritative Parenting in the West and in Japan: Is This Dichotomy Valid in Japan?. OSF Preprints. \url{https://doi.org/10.31219/osf.io/g9ep7}
+	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (2023, January 18). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. OSF Preprints. \url{https://doi.org/10.31219/osf.io/krw65}
 \end{enumerate}
 	 
 \section{Academic Presentation}
@@ -123,7 +131,7 @@ thamamura[@]ncnp.go.jp\\
 	\item \underline{Hamamura, T.}, Kitamura, M., Asano, H., Honjo, M. Yoneyama, A. (2021, December). A digital intervention to prevent problematic smartphone use: Development and a pilot trial of smartphone application for children and parents. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2021, held online.
 	\item Kobayashi, N., Jitoku, D., Nakajima, R., \underline{Hamamura, T.}, Honjo, M., Sugihara, G., Takahashi, H. (2022, December). Relationships between problematic internet and gaming use and bone density in outpatients. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2022.
 	\item \underline{Hamamura, T.}, Kobayashi, N., Jitoku, D., Nakajima, R., Takahashi, H., Honjo, M. (2022, September). Objective measurement of problematic smartphone use among A clinical sample. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2022.
-	\item \underline{Hamamura, T.}・Kaneko, K., Ito, M. (2022, November 11). Associations of gaming disorder with internatilizing and family functioning among children and adolescents. Oral presentation at the Japanese Association for Cognitive Therapy.
+	\item \underline{Hamamura, T.}, Kaneko, K., Ito, M. (2022, November 11). Associations of gaming disorder with internatilizing and family functioning among children and adolescents. Oral presentation at the Japanese Association for Cognitive Therapy.
 \end{enumerate}
 
 \section{Other Publication}
@@ -150,12 +158,12 @@ thamamura[@]ncnp.go.jp\\
 \section{Society Affiliation}
 \begin{itemize}
 	\item Association of Japanese Clinical Psychology
-	\item Association for Psychological Science
-	%\item Japanese Medical Society of Alcohol and Addiction Studies
+%	\item Association for Psychological Science
+%	\item Japanese Medical Society of Alcohol and Addiction Studies
 	\item Japanese Psychological Association
 	\item Japanese Society of Alcohol-Related Problems
-	%\item Research Society on Alcoholism
-	%\item Society for Personality and Social Psychology
+%	\item Research Society on Alcoholism
+%	\item Society for Personality and Social Psychology
 \end{itemize}
 
 \section{Manuscript Review}
@@ -168,7 +176,6 @@ thamamura[@]ncnp.go.jp\\
 
 \section{Award}
 	\begin{itemize}
-		\item 2010: Graduating with Distinction, Trinity Western University
 		\item 2017: The 6th Kosugi Memorial Award (Distinguished Poster Presentation Award); Japanese Society of Alcohol-related Problems.
 		\item 2021: Distinguished Presence Award, KDDI Research, Inc. (Co-investigator)
 		\item 2022: Young Scholar Outstanding Presentation Award (Oral presentation),  The 22nd Annual Convention of Japanese Association for Cognitive Therapy
