--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -1,25 +1,15 @@
-\documentclass{article}
+\documentclass[a4paper]{article}
 %--package--%
 \usepackage{newtxtext}
 \usepackage{CJKutf8}
-%\usepackage{otf}
-%\usepackage{okumacro}
 \usepackage{parskip}
 \usepackage{pagecolor}
-\usepackage{geometry}
-\geometry{
-	a4paper,
-	total={170mm,257mm},
-	left=20mm,
-	top=20mm,
-}
-%\pagecolor{black}
-%\color{white}
+\usepackage{url}
 
 
 \begin{document}
 \title{Curriculum Vitae}
-\date{2023年1月11日}
+\date{2023年1月21日}
 \maketitle
 
 \noindent
@@ -37,16 +27,23 @@ toshitaka.hamamura[@]gmail.com
 \begin{description}
 	\item 2010年09月～2012年06月：Residential Care Worker, Developmental Disabilities Association
 	\item 2017年04月～2019年03月： 日本学術振興会 特別研究員（DC2）（受入機関／東京大学）
-	\item 2019年04月～2020年03月： 株式会社KDDI総合研究所　研究員
+	\item 2019年04月～2020年03月： 株式会社KDDI総合研究所　有期契約社員（ポスドク研究員）
 	\item 2020年04月～現在： 日本学術振興会 特別研究員（PD）（受入機関／国立精神・神経医療研究センター）
-	\item 2019年04月～現在： 株式会社KDDI総合研究所　招聘研究員
+\end{description}
+
+\section{その他の職歴・所属歴}
+\begin{description}
+	\item 2019年04月～2020年03月： 国立精神・神経医療研究センター　認知行動療法センター　研究生
+	\item 2020年04月～現在： 国立精神・神経医療研究センター　認知行動療法センター　外来研究員
+	\item 2020年04月～現在： 株式会社KDDI総合研究所　招聘研究員
+	\item 2022年12月～2023年1月：国立台湾大学心理学部　Visiting Scholar
 \end{description}
 
 \section{学歴}
 \begin{description}
-	\item 2003年09月～2006年06月： デイビッド・トンプソン 高等学校
-	\item 2006年09月～2010年05月： トリニティ・ウエスタン大学 人文社会科学部 心理学専修
-	\item 2012年04月～2015年08月： カリフォルニア州立大学フラートン校 大学院人文社会科学研究科 心理学専攻 臨床心理学コース 修士課程
+	\item 2003年09月～2006年06月： カナダ　デイビッド・トンプソン・セカンダリースクール（高等学校）
+	\item 2006年09月～2010年05月： カナダ　トリニティ・ウエスタン大学 人文社会科学部 心理学専修
+	\item 2012年04月～2015年08月： 米国　カリフォルニア州立大学フラートン校 大学院人文社会科学研究科 心理学専攻 臨床心理学コース 修士課程
 	\item 2016年04月～2019年03月： 東京大学 大学院教育学研究科 総合教育科学専攻 心身発達科学専修 臨床心理学コース 博士課程．副専攻：Social ICT Graduate Program（リーディング大学院）
 \end{description}
 \section{資格}
@@ -87,10 +84,10 @@ toshitaka.hamamura[@]gmail.com
 	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018). The efficacy of a web-based screening and brief intervention for reducing alcohol consumption among Japanese problem drinkers: Protocol of a single-blind randomized controlled trial. JMIR Research Protocol, 7(5):e10650\\ doi:10.2196/10650
 	\item \underline{Hamamura, T.}, \& Mearns, J. (2019). Depression and somatic symptoms in Japanese and American college students: Negative mood regulation expectancies as a personality correlate. International Journal of Psychology, 54, 351-359. doi:10.1002/ijop.12467
 	\item \underline{Hamamura, T.}, \& Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. International Journal of Mental Health and Addiction, 18, 195-206. doi:10.1007/s11469-018-9991-8
-	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (in press). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. Journal of Psychiatric Research, 142, 0022-3956. doi:10.1016/j.jpsychires.2021.07.054
-	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. Translational Psychiatry. doi:10.1038/s41398-021-01696-x
-	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2021). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. Addictive Behaviors Reports. doi:10.1016/j.abrep.2021.100400
-	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (in press). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. Japanese Psychological Research.
+	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (in press). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. Journal of Psychiatric Research, 142, 0022-3956. \url{https://doi.org/10.1016/j.jpsychires.2021.07.054}
+	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. Translational Psychiatry. \url{https:/doi.org/10.1038/s41398-021-01696-x}
+	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2022). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. Addictive Behaviors Reports, 15, 100400. \url{https://doi.org/10.1016/j.abrep.2021.100400}
+	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (2022). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. Japanese Psychological Research. \url{https://doi.org/10.1111/jpr.12408}
 \end{enumerate}
 
 \section{学術論文・プレプリント（査読なし）}
@@ -98,8 +95,10 @@ toshitaka.hamamura[@]gmail.com
 	\item 上田\ 翠・\underline{浜村\ 俊傑}・中村杏奈・下山晴彦(2017). 衝動性に関する遺伝環境交互作用−動物研究の応用可能性−\ 東京大学大学院教育学研究科臨床心理学コース紀要，40，22-29．
 	\item 内村\ 慶士・\underline{浜村\ 俊傑}・北原祐理・大賀真伊・鈴木拓朗・小林奈央・下山晴彦（2018）．ACT（アクセプタンス\&コミットメントセラピー）を用いたポピュレーションアプローチの可能性―well-beingの増進とその予防効果に着目して\ 東京大学大学院教育学研究科臨床心理学コース紀要, 41，34-41．
 	\item 高堰\ 仁美・\underline{浜村\ 俊傑}・李智慧・下山晴彦（2019）. 慢性的虐待のリスクを抱え孤立状態にある母親への支援の現状と課題\ 東京大学大学院教育学研究科臨床心理学コース紀要, 42．
-	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. medRxiv. doi:110.1101/2020.12.15.20246819
-	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2022, December 21). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. PsyArXiv. https://doi.org/10.31234/osf.io/2uzsd
+	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. medRxiv. \url{https://doi.org/110.1101/2020.12.15.20246819}
+	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2022, December 21). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. PsyArXiv. \url{https://doi.org/10.31234/osf.io/2uzsd}
+	\item Quaranta, T., \underline{Hamamura, T.}, \& Mearns, J. (2023, January 11). Correlates of Authoritarian versus Authoritative Parenting in the West and in Japan: Is This Dichotomy Valid in Japan?. OSF Preprints. \url{https://doi.org/10.31219/osf.io/g9ep7}
+	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (2023, January 18). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. OSF Preprints. \url{https://doi.org/10.31219/osf.io/krw65}	
 \end{enumerate}
 
 \section{国際学会・シンポジウム等における発表}
@@ -177,7 +176,6 @@ toshitaka.hamamura[@]gmail.com
 \end{enumerate}
 \section{賞罰}
 \begin{description}
-	\item 2010年05月： Graduating with Distinction, トリニティ・ウエスタン大学（個人）
 	\item 2017年09月： 日本アルコール関連問題学会 第6回小杉好弘記念賞（代表）
 	\item 2021年03月： KDDI総合研究所　優秀プレゼンス賞（共同）
 	\item 2022年11月：第22回日本認知療法・	認知行動療法学会　若手優秀演題賞（一般演題）（代表）
