--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -31,59 +31,60 @@ thamamura[@]ncnp.go.jp\\
 
 \section{Professional Position}
 \begin{itemize}
-	\item 2017/04--2019/03: \textbf{Research Fellow (DC2)}, Japan Society for the Promotion of Science (Host Institution: University of Tokyo)
-	\item 2019/04--2020/03: \textbf{Associate Researcher}, KDDI Research, Inc.
-	\item 2020/04--present: \textbf{Research Fellow (PD)}, Japan Society for the Promotion of Science (Host Institution: National Center of Neurology and Psychiatry)
+	\item 2017/04---2019/03: \textbf{Research Fellow (DC2)}, Japan Society for the Promotion of Science (Host Institution: University of Tokyo)
+	\item 2019/04---2020/03: \textbf{Associate Researcher}, KDDI Research, Inc.
+	\item 2020/04---present: \textbf{Research Fellow (PD)}, Japan Society for the Promotion of Science (Host Institution: National Center of Neurology and Psychiatry)
 \end{itemize}
 
-\section{Other Positions}
+\section{Other Positions and Affiliations}
 \begin{itemize}
-	\item 2020/04--present: \textbf{Invited Researcher}, KDDI Research, Inc.
-	\item 2022/12--2023/01: \textbf{Visiting Scholar}, Department of Psychology, National Taiwan University
+	\item 2020/04---present: \textbf{JSPS Research Fellow}, National Center for Cognitive Behavior Therapy and Research, National Center of Neurology and Psychiatry
+	\item 2020/04---present: \textbf{Invited Researcher}, KDDI Research, Inc.
+	\item 2022/12---2023/01: \textbf{Visiting Scholar}, Department of Psychology, National Taiwan University
 \end{itemize}
 
 \section{Education}
 \begin{itemize}
-	\item 2006--2010: \textbf{Bachelor of Art in Psychology}, Trinity Western University, Langley, BC, Canada. Minor in Business Administration. \textit{Graduating with distinction.}
-	\item 2012--2015: \textbf{Master of Science in Clinical Psychology}, California State University, Fullerton, CA, USA. 
-	\item 2016--2019: \textbf{Doctor of Philosophy in Education (Clinical Psychology)}, University of Tokyo, Bunkyo, Tokyo, Japan. Minor in Social ICT Graduate Program.
+	\item 2006---2010: \textbf{Bachelor of Art in Psychology}, Trinity Western University, Langley, BC, Canada. Minor in Business Administration. \textit{Graduating with distinction.}
+	\item 2012---2015: \textbf{Master of Science in Clinical Psychology}, California State University, Fullerton, CA, USA. 
+	\item 2016---2019: \textbf{Doctor of Philosophy in Education (Clinical Psychology)}, University of Tokyo, Bunkyo, Tokyo, Japan. Minor in Social ICT Graduate Program.
 \end{itemize}
 
 \section{Licenses}
 \begin{itemize}
-	\item 2019--present: \textbf{Clinical Psychologist}, Foundation of the Japanese Certification Board for Clinical Psychologists. (Japan)
-	\item 2019--present: \textbf{Certified Public Psychologist}, Ministry of Health, Labour, and Welfare / Ministry of Education, Culture, Sports, Science and Technology. (Japan)
+	\item 2019---present: \textbf{Clinical Psychologist}, Foundation of the Japanese Certification Board for Clinical Psychologists. (Japan)
+	\item 2019---present: \textbf{Certified Public Psychologist}, Ministry of Health, Labour, and Welfare / Ministry of Education, Culture, Sports, Science and Technology. (Japan)
 \end{itemize} 
 
 \section{Clinical Experience}
 \begin{itemize}
-	\item 2010--2012: \textbf{Residential Care Worker}, Developmental Disabilities Association, Richmond, BC, Canada
-	\item 2011--2012: \textbf{Mental Health Worker}, Coast Mental Health, Vancouver, BC, Canada
-	\item 2016--2017: \textbf{Mental Health Worker}, Taito City Health Center, Tokyo, Japan
-	\item 2017--2018: \textbf{Staff Counselor}, Student Support Office, Graduate School of Science, University of Tokyo, Japan
-	\item 2018--2019: \textbf{Staff Counselor}, Support Room, Graduate School of Economics, University of Tokyo, Japan
-	\item 2019--present: \textbf{Psychologist}, National Center for Cognitive Behavior Therapy and Research, National Center of Neurology and Psychiatry, Japan
-	\item 2020--present: \textbf{Psychologist}, Psychiatric Unit, Tokyo Medical and Dental University, Japan
+	\item 2010---2012: \textbf{Residential Care Worker}, Developmental Disabilities Association, Richmond, BC, Canada
+	\item 2011---2012: \textbf{Mental Health Worker}, Coast Mental Health, Vancouver, BC, Canada
+	\item 2016---2017: \textbf{Mental Health Worker}, Taito City Health Center, Tokyo, Japan
+	\item 2017---2018: \textbf{Staff Counselor}, Student Support Office, Graduate School of Science, University of Tokyo, Japan
+	\item 2018---2019: \textbf{Staff Counselor}, Support Room, Graduate School of Economics, University of Tokyo, Japan
+	\item 2019---present: \textbf{Psychologist}, National Center for Cognitive Behavior Therapy and Research, National Center of Neurology and Psychiatry, Japan
+	\item 2020---present: \textbf{Psychologist}, Psychiatric Unit, Tokyo Medical and Dental University, Japan
 \end{itemize}
 
 \section{Teaching Experience}
 \begin{itemize}
-	\item 2013--2015: \textbf{Graduate assistant}, California State University, Fullerton, Fullerton, USA (Research methods; Learning and memory; Cognitive psychology; Comparative animal bahavior)
-	\item 2017--2019: \textbf{Teaching assistant}, University of Tokyo, Tokyo, Japan (Intelligence Test)
-	\item 2019--2022: \textbf{Part-time lecturer}, Seikei University, Tokyo, Japan (Introduction to Psychology)
-	\item 2021--2022: \textbf{Part-time lecturer}, Tokyo Women's Christian University, Tokyo, Japan (Third-year undergraduate seminar)
+	\item 2013---2015: \textbf{Graduate assistant}, California State University, Fullerton, Fullerton, USA (Research methods; Learning and memory; Cognitive psychology; Comparative animal bahavior)
+	\item 2017---2019: \textbf{Teaching assistant}, University of Tokyo, Tokyo, Japan (Intelligence Test)
+	\item 2019---2022: \textbf{Part-time lecturer}, Seikei University, Tokyo, Japan (Introduction to Psychology)
+	\item 2021---2022: \textbf{Part-time lecturer}, Tokyo Women's Christian University, Tokyo, Japan (Third-year undergraduate seminar)
 \end{itemize}
 
 \section{Publication}
 \subsection{Peer-Reviewed Articles}
 \begin{enumerate}
-	\item \underline{Hamamura, T.}, \& Laird, P.G. (2014) The effect of perfectionism and acculturative stress on levels of depression experienced by East Asian international students. \textit{Journal of Multicultural Counseling Development}, 42, 205-217. doi: 10.1002/j.2161-1912.2014.00055.x
-	\item \underline{Hamamura, T.}, Suganuma, S., Ueda, M., Shimoyama, H., \& Mearns, J. (2018). Standalone effects of a cognitive behavioral intervention using a smartphone application on psychological distress and alcohol consumption among Japanese workers: A non-randomized controlled trial. \textit{JMIR Mental Health} (forthcoming). doi:10.2196/mental.8984 http://dx.doi.org/10.2196/mental.8984
-	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018). The efficacy of a web-based screening and brief intervention for reducing alcohol consumption among Japanese problem drinkers: Protocol of a single-blind randomized controlled trial. \textit{JMIR Research Protocol}, 7(5):e10650. doi:10.2196/10650
-	\item \underline{Hamamura, T.}, \& Mearns, J. (2019). Depression and somatic symptoms in Japanese and American college students: Negative mood regulation expectancies as a personality correlate. \textit{International Journal of Psychology}, 54, 351-359. doi:10.1002/ijop.12467
-	\item \underline{Hamamura, T.}, \& Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. \textit{International Journal of Mental Health and Addiction}, 18, 1-12. doi:10.1007/s11469-018-9991-8
-	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (in press). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. \textit{Journal of Psychiatric Research}, 142, 0022-3956. doi:10.1016/j.jpsychires.2021.07.054
-	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. \textit{Translational Psychiatry}. doi:10.1038/s41398-021-01696-x
+	\item \underline{Hamamura, T.}, \& Laird, P.G. (2014) The effect of perfectionism and acculturative stress on levels of depression experienced by East Asian international students. \textit{Journal of Multicultural Counseling Development}, 42, 205-217. \url{https://doi.org/10.1002/j.2161-1912.2014.00055.x}
+	\item \underline{Hamamura, T.}, Suganuma, S., Ueda, M., Shimoyama, H., \& Mearns, J. (2018). Standalone effects of a cognitive behavioral intervention using a smartphone application on psychological distress and alcohol consumption among Japanese workers: A non-randomized controlled trial. \textit{JMIR Mental Health}, 5(1):e24. \url{http://doi.org/10.2196/mental.8984}
+	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018). The efficacy of a web-based screening and brief intervention for reducing alcohol consumption among Japanese problem drinkers: Protocol of a single-blind randomized controlled trial. \textit{JMIR Research Protocol}, 7(5):e10650.  \url{http://doi.org/10.2196/10650}
+	\item \underline{Hamamura, T.}, \& Mearns, J. (2019). Depression and somatic symptoms in Japanese and American college students: Negative mood regulation expectancies as a personality correlate. \textit{International Journal of Psychology}, 54(3), 351-359. \url{http://doi.org/10.1002/ijop.12467}
+	\item \underline{Hamamura, T.}, \& Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. \textit{International Journal of Mental Health and Addiction}, 18, 195-205. \url{http://doi.org/10.1007/s11469-018-9991-8}
+	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (2021). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. \textit{Journal of Psychiatric Research}, 142, 218-225. \url{https://doi.org/10.1016/j.jpsychires.2021.07.054}
+	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. \textit{Translational Psychiatry}, 11, 573. \url{https://doi.org/10.1038/s41398-021-01696-x}
 	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2022). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. Addictive Behaviors Reports, 15, 100400. \url{https://doi.org/10.1016/j.abrep.2021.100400}
 	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (2022). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. Japanese Psychological Research. \url{https://doi.org/10.1111/jpr.12408}
 \end{enumerate}
@@ -142,17 +143,17 @@ thamamura[@]ncnp.go.jp\\
 
 \section{Funded Research and Grant}
 \begin{description}
-	\item 2016--2017: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Effects on Virtual Reality Facial Feedback on Affect and Autobiographical Memory. (Group Project; Principal Investigator). Grant amount: ¥1,500,000
-	\item 2016--2017: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Effects of Self-Record Smartphone Application on Psychological Symptoms and Drinking Consumption. (Individual Project; Principal Investigator). Grant amount: ¥300,000
-	\item 2017--2019: Grant-in-Aid for JSPS Fellows (DC2), Japan Society for the Promotion of Science. The Cultural and Developmental Role of Negative Mood Regulation Expectancies. (Individual Project; Principal Investigator). Grant amount: ¥2,100,000
-	\item 2017--2018: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Understanding Mechanisms and Functionality of Self-Monitoring App and its Application in Clinical Settings. (Individual Project; Principal Investigator). Grant amount: ¥300,000
-	\item 2017--2018: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Examining Effects of ICT-based Educational Program Using Feedback with Mobile Devices for Reducing Heavy Drinking. (Individual Project; Principal Investigator).Grant amount: ¥300,000
-	\item 2018--2019: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Multi-method approaches for reducing problem drinking: Focusing on application of psychological theories. (Individual Project; Principal Investigator). Grant amount: ¥300,000
-	\item 2018--2019: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Development of a monitoring system using physiological measures for prevention of psychiatric disorders. (Group Project; Principal Investigator). Grant amount: ¥650,000
-	\item 2020--2023: Grant-in-Aid for JSPS Fellows (PD), Japan Society for the Promotion of Science. Comorbidities of and interventions for behavioral addiction among adolescents. (Individual Project; Principal Investigator). Grant amount: ¥4,160,000
-	\item 2020--2023: Grant-in-Aid for Early-career Scientists, Japan Society for the Promotion of Science. Understanding emotional Difficulties in gaming disorder. (Individual Project; Principal Investigator). Grant amount: ¥3,700,000
-	\item 2021--2024: Grant-in-Aid for Scientific Research, Japan Society for the Promotion of Science. Understanding the pathology and psychosocial risk factors of internet gamijng disorder among children and youth. (Co-investigator).
-	\item 2022--2023: Reiwa 4 nendo shougaisha sougou fukusi suishin jigyouhi hojyo kin, Ministry of Health, Labour and Welfare. Gyanburu tou izonshou mondai no jittai chousa no jisshi houhou no sakutei ni kakaru kentou. (Co-investigator).
+	\item 2016---2017: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Effects on Virtual Reality Facial Feedback on Affect and Autobiographical Memory. (Group Project; Principal Investigator). Grant amount: ¥1,500,000
+	\item 2016---2017: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Effects of Self-Record Smartphone Application on Psychological Symptoms and Drinking Consumption. (Individual Project; Principal Investigator). Grant amount: ¥300,000
+	\item 2017---2019: Grant-in-Aid for JSPS Fellows (DC2), Japan Society for the Promotion of Science. The Cultural and Developmental Role of Negative Mood Regulation Expectancies. (Individual Project; Principal Investigator). Grant amount: ¥2,100,000
+	\item 2017---2018: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Understanding Mechanisms and Functionality of Self-Monitoring App and its Application in Clinical Settings. (Individual Project; Principal Investigator). Grant amount: ¥300,000
+	\item 2017---2018: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Examining Effects of ICT-based Educational Program Using Feedback with Mobile Devices for Reducing Heavy Drinking. (Individual Project; Principal Investigator).Grant amount: ¥300,000
+	\item 2018---2019: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Multi-method approaches for reducing problem drinking: Focusing on application of psychological theories. (Individual Project; Principal Investigator). Grant amount: ¥300,000
+	\item 2018---2019: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Development of a monitoring system using physiological measures for prevention of psychiatric disorders. (Group Project; Principal Investigator). Grant amount: ¥650,000
+	\item 2020---2023: Grant-in-Aid for JSPS Fellows (PD), Japan Society for the Promotion of Science. Comorbidities of and interventions for behavioral addiction among adolescents. (Individual Project; Principal Investigator). Grant amount: ¥4,160,000
+	\item 2020---2023: Grant-in-Aid for Early-career Scientists, Japan Society for the Promotion of Science. Understanding emotional Difficulties in gaming disorder. (Individual Project; Principal Investigator). Grant amount: ¥3,700,000
+	\item 2021---2024: Grant-in-Aid for Scientific Research, Japan Society for the Promotion of Science. Understanding the pathology and psychosocial risk factors of internet gamijng disorder among children and youth. (Co-investigator).
+	\item 2022---2023: Reiwa 4 nendo shougaisha sougou fukusi suishin jigyouhi hojyo kin, Ministry of Health, Labour and Welfare. Gyanburu tou izonshou mondai no jittai chousa no jisshi houhou no sakutei ni kakaru kentou. (Co-investigator).
 	\end{description}
 
 \section{Society Affiliation}
