--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -1,5 +1,6 @@
-\documentclass[a4paper]{article}
+\documentclass[11pt,a4paper]{article}
 %--package--%
+\usepackage[margin=3cm]{geometry}
 \usepackage{newtxtext}
 \usepackage{CJKutf8}
 \usepackage{parskip}
@@ -9,7 +10,7 @@
 
 \begin{document}
 \title{Curriculum Vitae}
-\date{2023年1月21日}
+\date{2023年2月4日}
 \maketitle
 
 \noindent
@@ -25,7 +26,6 @@ toshitaka.hamamura[@]gmail.com
 
 \section{職歴}
 \begin{description}
-	\item 2010年09月～2012年06月：Residential Care Worker, Developmental Disabilities Association
 	\item 2017年04月～2019年03月： 日本学術振興会 特別研究員（DC2）（受入機関／東京大学）
 	\item 2019年04月～2020年03月： 株式会社KDDI総合研究所　有期契約社員（ポスドク研究員）
 	\item 2020年04月～現在： 日本学術振興会 特別研究員（PD）（受入機関／国立精神・神経医療研究センター）
@@ -79,13 +79,13 @@ toshitaka.hamamura[@]gmail.com
 
 \section{学術論文（査読あり）}
 \begin{enumerate}
-	\item \underline{Hamamura, T.}, \& Laird, P.G. (2014). The effect of perfectionism and acculturative stress on levels of depression experienced by East Asian international students. Journal of Multicultural Counseling Development, 42, 205-217. doi: 10.1002/j.2161-1912.2014.00055.x
-	\item \underline{Hamamura, T.}, Suganuma, S., Ueda, M., Mearns, J., \& Shimoyama, H. (2018). Standalone effects of a cognitive behavioral intervention using a mobile phone app on psychological distress and alcohol consumption among Japanese workers: Pilot nonrandomized controlled trial. JMIR Mental Health, 5(1):e24. doi:10.2196/mental.8984
-	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018). The efficacy of a web-based screening and brief intervention for reducing alcohol consumption among Japanese problem drinkers: Protocol of a single-blind randomized controlled trial. JMIR Research Protocol, 7(5):e10650\\ doi:10.2196/10650
-	\item \underline{Hamamura, T.}, \& Mearns, J. (2019). Depression and somatic symptoms in Japanese and American college students: Negative mood regulation expectancies as a personality correlate. International Journal of Psychology, 54, 351-359. doi:10.1002/ijop.12467
-	\item \underline{Hamamura, T.}, \& Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. International Journal of Mental Health and Addiction, 18, 195-206. doi:10.1007/s11469-018-9991-8
-	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (in press). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. Journal of Psychiatric Research, 142, 0022-3956. \url{https://doi.org/10.1016/j.jpsychires.2021.07.054}
-	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. Translational Psychiatry. \url{https:/doi.org/10.1038/s41398-021-01696-x}
+	\item \underline{Hamamura, T.}, \& Laird, P.G. (2014) The effect of perfectionism and acculturative stress on levels of depression experienced by East Asian international students. \textit{Journal of Multicultural Counseling Development}, 42, 205-217. \url{https://doi.org/10.1002/j.2161-1912.2014.00055.x}
+	\item \underline{Hamamura, T.}, Suganuma, S., Ueda, M., Shimoyama, H., \& Mearns, J. (2018). Standalone effects of a cognitive behavioral intervention using a smartphone application on psychological distress and alcohol consumption among Japanese workers: A non-randomized controlled trial. \textit{JMIR Mental Health}, 5(1):e24. \url{http://doi.org/10.2196/mental.8984}
+	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018). The efficacy of a web-based screening and brief intervention for reducing alcohol consumption among Japanese problem drinkers: Protocol of a single-blind randomized controlled trial. \textit{JMIR Research Protocol}, 7(5):e10650.  \url{http://doi.org/10.2196/10650}
+	\item \underline{Hamamura, T.}, \& Mearns, J. (2019). Depression and somatic symptoms in Japanese and American college students: Negative mood regulation expectancies as a personality correlate. \textit{International Journal of Psychology}, 54(3), 351-359. \url{http://doi.org/10.1002/ijop.12467}
+	\item \underline{Hamamura, T.}, \& Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. \textit{International Journal of Mental Health and Addiction}, 18, 195-205. \url{http://doi.org/10.1007/s11469-018-9991-8}
+	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (2021). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. \textit{Journal of Psychiatric Research}, 142, 218-225. \url{https://doi.org/10.1016/j.jpsychires.2021.07.054}
+	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. \textit{Translational Psychiatry}, 11, 573. \url{https://doi.org/10.1038/s41398-021-01696-x}
 	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2022). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. Addictive Behaviors Reports, 15, 100400. \url{https://doi.org/10.1016/j.abrep.2021.100400}
 	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (2022). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. Japanese Psychological Research. \url{https://doi.org/10.1111/jpr.12408}
 \end{enumerate}
