--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -88,6 +88,7 @@ toshitaka.hamamura[@]gmail.com
 	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. \textit{Translational Psychiatry}, 11, 573. \url{https://doi.org/10.1038/s41398-021-01696-x}
 	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2022). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. Addictive Behaviors Reports, 15, 100400. \url{https://doi.org/10.1016/j.abrep.2021.100400}
 	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (2022). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. Japanese Psychological Research. \url{https://doi.org/10.1111/jpr.12408}
+	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (in press). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. BMC Psychology. \url{https://doi.org/10.31234/osf.io/2uzsd}
 \end{enumerate}
 
 \section{学術論文・プレプリント（査読なし）}
@@ -96,7 +97,6 @@ toshitaka.hamamura[@]gmail.com
 	\item 内村\ 慶士・\underline{浜村\ 俊傑}・北原祐理・大賀真伊・鈴木拓朗・小林奈央・下山晴彦（2018）．ACT（アクセプタンス\&コミットメントセラピー）を用いたポピュレーションアプローチの可能性―well-beingの増進とその予防効果に着目して\ 東京大学大学院教育学研究科臨床心理学コース紀要, 41，34-41．
 	\item 高堰\ 仁美・\underline{浜村\ 俊傑}・李智慧・下山晴彦（2019）. 慢性的虐待のリスクを抱え孤立状態にある母親への支援の現状と課題\ 東京大学大学院教育学研究科臨床心理学コース紀要, 42．
 	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. medRxiv. \url{https://doi.org/110.1101/2020.12.15.20246819}
-	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2022, December 21). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. PsyArXiv. \url{https://doi.org/10.31234/osf.io/2uzsd}
 	\item Quaranta, T., \underline{Hamamura, T.}, \& Mearns, J. (2023, January 11). Correlates of Authoritarian versus Authoritative Parenting in the West and in Japan: Is This Dichotomy Valid in Japan?. OSF Preprints. \url{https://doi.org/10.31219/osf.io/g9ep7}
 	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (2023, January 18). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. OSF Preprints. \url{https://doi.org/10.31219/osf.io/krw65}	
 \end{enumerate}
